--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 </div>
 <div>
     <div>
-        <h2>All About Me </h2>
+        <h2> Get to Know Me </h2>
         <p>  I have a passion for creating innovative and user-friendly 
             designs. I firmly believe in doing things in an honest way in order to bring happiness to all people and I want to show this belief
             through my user research and designs.
