--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             </nav>
         </div>
     </header>
-</body>
 <main>
     <div>
         <div>
@@ -42,9 +41,10 @@
 <p><!-- open paragraph -->
 PlutoPay is an electronic wallet app that allows users to send money, shop for items, make payments and more.
 </p><!-- end paragraph -->
-<a href=""> View Project </a><!-- button or link label -->
+<a href="plutopay.html"> View Project </a><!-- button or link label -->
 </div><!-- end second column -->
     </div><!-- end row that holds (2) columns for project -->
+    </main>
     <footer>
         <div>
             <h2> Let's Stay Connected! </h2>
@@ -60,5 +60,5 @@ PlutoPay is an electronic wallet app that allows users to send money, shop for i
             <p> Copyright Tierre M 2023 </p>
         </div>
     </footer>
-</main>
+    </body>
 </html>
