--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>Tierre UX/UI Designer in Dallas</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -41,7 +46,7 @@
 <p><!-- open paragraph -->
 PlutoPay is an electronic wallet app that allows users to send money, shop for items, make payments and more.
 </p><!-- end paragraph -->
-<a href="plutopay.html"> View Project </a><!-- button or link label -->
+<a href="plutopay.html" class="button"> View Project </a><!-- button or link label -->
 </div><!-- end second column -->
     </div><!-- end row that holds (2) columns for project -->
     </main>
