--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </div>
     </header>
 <main>
-    <div>
-        <div>
+    <div id="hero">
+        <div class="container">
             <h1> Hey There!</h1>
             <p> Hello! My name is Tierre and I am a UX Designer based in Dallas, Texas. I have a passion for creating innovative designs. </p>
         </div>
@@ -50,7 +50,7 @@ PlutoPay is an electronic wallet app that allows users to send money, shop for i
 </div><!-- end second column -->
     </div><!-- end row that holds (2) columns for project -->
     </main>
-    <footer>
+    <footer id="contact">
         <div>
             <h2> Let's Stay Connected! </h2>
             <p> Please feel free to contact me through the socials below. </p>
