--- a/plutopay.html
+++ b/plutopay.html
@@ -27,7 +27,7 @@
         </div>
     </header>
 <main>
-   <div>
+   <div class="container">
     <h1> PlutoPay </h1>
     <picture>
         <source srcset="img/plutopay/mockup.png" media="(max-width:767px)">
@@ -230,7 +230,7 @@
     </picture>
 </div>
 </main>
-    <footer>
+    <footer id="contact">
         <div>
             <h2> Let's Stay Connected! </h2>
             <p> Please feel free to contact me through the socials below. </p>
