--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
         </div>
     </header>
 <main>
-<div>
-    <div>
+<div id="hero">
+    <div class="container">
         <h1> About </h1>
         </div>
 </div>
@@ -72,7 +72,7 @@
     </ul>
 </div>
 </main>
-<footer>
+<footer id="contact">
     <div>
         <h2> Let's Stay Connected! </h2>
         <p> Please feel free to contact me through the socials below. </p>
