--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         </div>
     </header>
 <main>
-<div id="hero">
+<div id="about">
     <div class="container">
         <h1> About </h1>
         </div>
@@ -38,7 +38,7 @@
     </picture>
     </div>
 </div>
-<div>
+<div class="container">
     <div>
         <h2> Get to Know Me </h2>
         <p>  I have a passion for creating innovative and user-friendly 
@@ -48,7 +48,7 @@
             <a href="files/resume.pdf" target="_blank"> Download My Resume </a>
     </div>
 </div>
-<div>
+<div class="container">
     <div>
         <h2> Skills and Tools </h2>
     </div>
