--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <!-- Header -->
     <header>
         <!-- Top Nav -->
-        <div>
-            <img src="img/logo.svg" alt="Tierre Middleton">
+        <div class="container">
+            <img src="img/logo.svg" alt="Tierre Middleton" class="logo">
             <nav>
-                <ul>
+                <ul class="navigation">
                 <li><a href="index.html"> Work</a></li>
                 <li><a href="about.html"> About</a></li>
                 <li><a href="#contact"> Contact</a></li>
@@ -36,10 +36,12 @@
     <div><!-- open row that holds (2) columns for project -->
 <div> <!-- open first column (used for image) -->
     <h2> My Work </h2>
+    <div class="row">
 <picture>
     <source srcset="img/plutopay/plutopay.jpg" media="(max-width:767px)">
     <img src="img/plutopay/plutopay.jpg" alt="My Image">
 </picture>
+</div>
 </div><!-- end first column -->
 <div><!-- open second column (used for text)-->
 <h3> PlutoPay </h3><!-- project heading -->
@@ -51,14 +53,14 @@ PlutoPay is an electronic wallet app that allows users to send money, shop for i
     </div><!-- end row that holds (2) columns for project -->
     </main>
     <footer id="contact">
-        <div>
+        <div class="footer">
             <h2> Let's Stay Connected! </h2>
             <p> Please feel free to contact me through the socials below. </p>
         </div>
         <div>
             <a href="middletontierre@gmail.com"> Email Me </a>
             <!-- social media layout and placeholders -->
-            <a href="https://www.linkedin.com/in/tierre-middleton-28b379227/" target="_blank"><svg height="32" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512" width="32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M256,0c141.29,0 256,114.71 256,256c0,141.29 -114.71,256 -256,256c-141.29,0 -256,-114.71 -256,-256c0,-141.29 114.71,-256 256,-256Zm-80.037,399.871l0,-199.921l-66.464,0l0,199.921l66.464,0Zm239.62,0l0,-114.646c0,-61.409 -32.787,-89.976 -76.509,-89.976c-35.255,0 -51.047,19.389 -59.889,33.007l0,-28.306l-66.447,0c0.881,18.757 0,199.921 0,199.921l66.446,0l0,-111.65c0,-5.976 0.43,-11.95 2.191,-16.221c4.795,-11.935 15.737,-24.299 34.095,-24.299c24.034,0 33.663,18.34 33.663,45.204l0,106.966l66.45,0Zm-272.403,-296.321c-22.74,0 -37.597,14.95 -37.597,34.545c0,19.182 14.405,34.544 36.717,34.544l0.429,0c23.175,0 37.6,-15.362 37.6,-34.544c-0.43,-19.595 -14.424,-34.545 -37.149,-34.545Z"/></svg>
+            <a href="https://www.linkedin.com/in/tierremiddleton/" target="_blank"><svg height="32" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512" width="32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M256,0c141.29,0 256,114.71 256,256c0,141.29 -114.71,256 -256,256c-141.29,0 -256,-114.71 -256,-256c0,-141.29 114.71,-256 256,-256Zm-80.037,399.871l0,-199.921l-66.464,0l0,199.921l66.464,0Zm239.62,0l0,-114.646c0,-61.409 -32.787,-89.976 -76.509,-89.976c-35.255,0 -51.047,19.389 -59.889,33.007l0,-28.306l-66.447,0c0.881,18.757 0,199.921 0,199.921l66.446,0l0,-111.65c0,-5.976 0.43,-11.95 2.191,-16.221c4.795,-11.935 15.737,-24.299 34.095,-24.299c24.034,0 33.663,18.34 33.663,45.204l0,106.966l66.45,0Zm-272.403,-296.321c-22.74,0 -37.597,14.95 -37.597,34.545c0,19.182 14.405,34.544 36.717,34.544l0.429,0c23.175,0 37.6,-15.362 37.6,-34.544c-0.43,-19.595 -14.424,-34.545 -37.149,-34.545Z"/></svg>
                 </a>
         </div>
         <div>
