--- a/index.html
+++ b/index.html
@@ -678,5 +678,6 @@ PlutoPay is an electronic wallet app that allows users to send money, shop for i
             <p> Copyright Tierre M 2023 </p>
         </div>
     </footer>
+<script src="js/scripts.js"></script>
     </body>
 </html>
