--- a/plutopay.html
+++ b/plutopay.html
@@ -27,23 +27,22 @@
         </div>
     </header>
 <main>
+
    <div class="container">
     <h1> PlutoPay </h1>
     <picture>
         <source srcset="img/plutopay/mockup.png" media="(max-width:767px)">
         <img src="img/plutopay/mockup@2.png" alt="PlutoPay Mockup">
     </picture>
-   </div>
-   <div>
+    <div>
     <h2> Problem </h2>
     <p> Users need a way to quickly pay for items, make bill payments and save money without
         the use of their physical wallets.
     </p>
-    <div>
         <h2> Solution </h2>
         <p> The solution is to create an electronic wallet app with key features in order to gain convenience.</p>
     </div>
-   </div>
+
    <div>
     <h2> My Roles </h2>
     <ul>
@@ -52,6 +51,7 @@
         <li> UI Designer </li>
     </ul>
    </div>
+
 <div>
     <h2>Project Phases </h2>
     <ul>
@@ -61,18 +61,18 @@
         <li> High Fidelity Wireframes </li>
     </ul>
 </div>
+
 <div>
     <h2> Competitive Analysis </h2>
     <p> The first step is a competitive analysis. Keeping the problem in mind, I completed a search for competitors of the app PlutoPay
         The two apps that I found were Apple Wallet and Folio: Wallet App.
     </p>
-    <div>
     <picture>
         <source srcset="img/plutopay/competitive_analysis.png" media="(max-width:767px)">
         <img src="img/plutopay/competitive_analysis@2.jpg" alt="Competitive Analysis">
     </picture>
     </div>
-</div>
+
 <div>
 <h2> User Research </h2>
 <p> I then conducted 3 remote interviews with the goal to:
@@ -91,13 +91,15 @@
         <li> The convenience of an electronic wallet app is what will motivate the users to use it. </li>
     </ul>
     </p>
+    </div>
+
 <div>
 <picture>
     <source srcset="img/plutopay/affinity_map.png" media="(max-width:767px)">
     <img src="img/plutopay/affinity_map@2.png" alt="Affinity Map">
 </picture>
 </div>
-</div>
+
 <div>
     <h2> User Personas </h2>
     <p> After careful consideration of insights found from user research, I created two personas. David and Andrea. </p>
@@ -112,10 +114,10 @@
     </picture>
     </div>
 </div>
+
 <div>
     <h2> User Flows </h2>
     <p> David and Andrea now have journeys that need to be defined to follow their goals of checking their spending habits and paying bills. </p>
-    <div>
     <picture>
         <source srcset="img/plutopay/userflow1.jpg" media="(max-width:767px)">
         <img src="img/plutopay/userflow1@2.jpg" alt="David's User Flow">
@@ -125,7 +127,7 @@
         <img src="img/plutopay/userflow2@2.jpg" alt="Andrea's User Flow">
     </picture>
     </div>
-</div>
+
 <div>
     <h2> Sitemap Before </h2>
     <div>
@@ -135,16 +137,19 @@
         </picture>
     </div>
 </div>
+
 <div>
     <h2> Card Sorting </h2>
     <p> An open card sorting study was made using the website <a href="optimalworkshop.com" target="_blank"> optimalworkshop.com </a> in order to test the effectiveness of the sitemap. </p>
     <p> The study was sent to 10 participants and 5 completed the study.</p>
 </div>
+
 <div>
     <h2> Card Sorting Results </h2>
     <p> I chose for this study to be open in order to get more ideas for the sitemap and see how others would group the cards given.</p>
     <p> Doing this study definitely made me reaarrange a few cards in my sitemap and even add more cards to create a more effective and efficient sitemap. </p>
 </div>
+
 <div>
     <h2> Card Sorting After </h2>
     <div>
@@ -154,94 +159,53 @@
         </picture>
     </div>
 </div>
+
 <div>
     <h2> Wireframes </h2>
     <p> Following the flow of the sitemap, I created wireframes. My low fidelity wireframes were drawn through the GoodNotes app and I created my mid and high fidelity wireframes through Figma. </p>
     <div>
         <picture>
-            <source srcset="img/plutopay/low1.jpg" media="(max-width:767px)">
-            <img src="img/plutopay/low1@2.jpg" alt="Low Fidelity 1">
-        </picture>
-        <picture>
-            <source srcset="img/plutopay/low2.jpg" media="(max-width:767px)">
-            <img src="img/plutopay/low2@2.jpg" alt="Low Fidelity 2">
-        </picture>
-        <picture>
-            <source srcset="img/plutopay/low3.jpg" media="(max-width:767px)">
-            <img src="img/plutopay/low3@2.jpg" alt="Low Fidelity 3">
-        </picture>
-        <picture>
-            <source srcset="img/plutopay/low4.jpg" media="(max-width:767px)">
-            <img src="img/plutopay/low4@2.jpg" alt="Low Fidelity 4">
+            <source srcset="img/plutopay/lowfi.jpg" media="(max-width:767px)">
+            <img src="img/plutopay/lowfi@1.jpg" alt="Low Fidelity">
         </picture>
     </div>
+    </div>
+
     <div>
         <picture>
-            <source srcset="img/plutopay/mid1.png" media="(max-width:767px)">
-            <img src="img/plutopay/mid1@2.png" alt="Mid Fidelity 1">
-        </picture>
-        <picture>
-            <source srcset="img/plutopay/mid2.png" media="(max-width:767px)">
-            <img src="img/plutopay/mid2@2.png" alt="Mid Fidelity 2">
-        </picture>
-        <picture>
-            <source srcset="img/plutopay/mid3.png" media="(max-width:767px)">
-            <img src="img/plutopay/mid3@2.png" alt="Mid Fidelity 3">
-        </picture>
-        <picture>
-            <source srcset="img/plutopay/mid4.png" media="(max-width:767px)">
-            <img src="img/plutopay/mid4@2.png" alt="Mid Fidelity 4">
-        </picture>
-        <picture>
-            <source srcset="img/plutopay/mid5.png" media="(max-width:767px)">
-            <img src="img/plutopay/mid53@2.png" alt="Mid Fidelity 5">
+            <source srcset="img/plutopay/midfi.jpg" media="(max-width:767px)">
+            <img src="img/plutopay/midfi@1.jpg" alt="Mid Fidelity">
         </picture>
     </div>
+
     <div>
         <picture>
-            <source srcset="img/plutopay/high1.png" media="(max-width:767px)">
-            <img src="img/plutopay/high1@2.png" alt="High Fidelity 1">
-        </picture>
-        <picture>
-            <source srcset="img/plutopay/high2.png" media="(max-width:767px)">
-            <img src="img/plutopay/high2@2.png" alt="High Fidelity 2">
-        </picture>
-        <picture>
-            <source srcset="img/plutopay/high3.png" media="(max-width:767px)">
-            <img src="img/plutopay/high3@2.png" alt="High Fidelity 3">
-        </picture>
-        <picture>
-            <source srcset="img/plutopay/high4.png" media="(max-width:767px)">
-            <img src="img/plutopay/high4@2.png" alt="High Fidelity 4">
-        </picture>
-        <picture>
-            <source srcset="img/plutopay/high5.png" media="(max-width:767px)">
-            <img src="img/plutopay/high5@2.png" alt="High Fidelity 5">
-        </picture>
+            <source srcset="img/plutopay/highfi.jpg" media="(max-width:767px)">
+            <img src="img/plutopay/highfi@1.jpg" alt="High Fidelity">
+            </picture>
     </div>
-</div>
+
 <div>
     <h2> Clickable Prototype </h2>
     <p> Please click the link below and take a look at the final stages of the PlutoPay app. </p>
-    <a href="https://www.figma.com/proto/KxMPVIw66TGzHwnrdVW4W0/PlutoPay-Mobile?page-id=0%3A1&node-id=15-33&viewport=607%2C543%2C0.5&scaling=scale-down&starting-point-node-id=15%3A33&show-proto-sidebar=1" target="_blank"> PlutoPay Prototype </a>
+    <a href="https://www.figma.com/proto/KxMPVIw66TGzHwnrdVW4W0/PlutoPay-Mobile?page-id=0%3A1&node-id=15-33&viewport=607%2C543%2C0.5&scaling=scale-down&starting-point-node-id=15%3A33&show-proto-sidebar=1" target="_blank" class="button"> PlutoPay Prototype </a>
     <picture>
         <source srcset="img/plutopay/final_mockup.png" media="(max-width:767px)">
         <img src="img/plutopay/final_mockup@2.png" alt="PlutoPay Mockup">
     </picture>
 </div>
+</div>
+   
 </main>
     <footer id="contact">
         <div class="footer">
             <h2> Let's Stay Connected! </h2>
             <p> Please feel free to contact me through the socials below. </p>
-        </div>
-        <div class="footer">
             <a href="middletontierre@gmail.com"> Email Me </a>
             <!-- social media layout and placeholders -->
+            <div class="linkedin">
             <a href="https://www.linkedin.com/in/tierremiddleton/" target="_blank"><svg height="32" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512" width="32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M256,0c141.29,0 256,114.71 256,256c0,141.29 -114.71,256 -256,256c-141.29,0 -256,-114.71 -256,-256c0,-141.29 114.71,-256 256,-256Zm-80.037,399.871l0,-199.921l-66.464,0l0,199.921l66.464,0Zm239.62,0l0,-114.646c0,-61.409 -32.787,-89.976 -76.509,-89.976c-35.255,0 -51.047,19.389 -59.889,33.007l0,-28.306l-66.447,0c0.881,18.757 0,199.921 0,199.921l66.446,0l0,-111.65c0,-5.976 0.43,-11.95 2.191,-16.221c4.795,-11.935 15.737,-24.299 34.095,-24.299c24.034,0 33.663,18.34 33.663,45.204l0,106.966l66.45,0Zm-272.403,-296.321c-22.74,0 -37.597,14.95 -37.597,34.545c0,19.182 14.405,34.544 36.717,34.544l0.429,0c23.175,0 37.6,-15.362 37.6,-34.544c-0.43,-19.595 -14.424,-34.545 -37.149,-34.545Z"/></svg>
-                </a>
-        </div>
-        <div class="footer">
+                </a></div>
             <p> Copyright Tierre M 2023 </p>
         </div>
     </footer>
