--- a/about.html
+++ b/about.html
@@ -25,13 +25,11 @@
         </div>
     </header>
 <main>
-<div id="about">
-    <div class="container">
+        <div>
         <h1> About </h1>
         </div>
-</div>
-<div class="row">
-    <div class="col-md-6 col-lg-8 col-xl-4">
+<div class="container">
+    <div class="about">
     <picture>
         <source srcset="img/profile.jpg" media="(max-width:767px)">
         <img src="img/profile@2.jpg" alt="Profile">
@@ -39,20 +37,22 @@
     </div>
 </div>
 <div class="container">
-    <div>
+    <div id="about">
+        <div>
         <h2> Get to Know Me </h2>
         <p>  I have a passion for creating innovative and user-friendly 
             designs. I firmly believe in doing things in an honest way in order to bring happiness to all people and I want to show this belief
             through my user research and designs.
             Whenever I'm not perfecting my craft I enjoy spending time with my family and fur baby. </p>
             <a href="files/tierrem_resume2.pdf" target="_blank" class="button"> Download My Resume </a>
+            </div>
     </div>
 </div>
 <div class="container">
     <div>
         <h2> Skills and Tools </h2>
     </div>
-</div>
+<div class="row">
 <div class="col-md-6 col-lg-8 col-xl-4">
     <h3> Skills </h3>
     <ul>
@@ -70,20 +70,19 @@
         <li> Marvel </li>
         <li> Abobe XD </li>
     </ul>
+    </div>
+    </div>
 </div>
 </main>
 <footer id="contact">
     <div class="footer">
         <h2> Let's Stay Connected! </h2>
         <p> Please feel free to contact me through the socials below. </p>
-    </div>
-    <div class="footer">
         <a href="middletontierre@gmail.com"> Email Me </a>
         <!-- social media layout and placeholders -->
+        <div class="linkedin">
         <a href="https://www.linkedin.com/in/tierremiddleton/" target="_blank"><svg height="32" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512" width="32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M256,0c141.29,0 256,114.71 256,256c0,141.29 -114.71,256 -256,256c-141.29,0 -256,-114.71 -256,-256c0,-141.29 114.71,-256 256,-256Zm-80.037,399.871l0,-199.921l-66.464,0l0,199.921l66.464,0Zm239.62,0l0,-114.646c0,-61.409 -32.787,-89.976 -76.509,-89.976c-35.255,0 -51.047,19.389 -59.889,33.007l0,-28.306l-66.447,0c0.881,18.757 0,199.921 0,199.921l66.446,0l0,-111.65c0,-5.976 0.43,-11.95 2.191,-16.221c4.795,-11.935 15.737,-24.299 34.095,-24.299c24.034,0 33.663,18.34 33.663,45.204l0,106.966l66.45,0Zm-272.403,-296.321c-22.74,0 -37.597,14.95 -37.597,34.545c0,19.182 14.405,34.544 36.717,34.544l0.429,0c23.175,0 37.6,-15.362 37.6,-34.544c-0.43,-19.595 -14.424,-34.545 -37.149,-34.545Z"/></svg>
-            </a>
-    </div>
-    <div class="footer">
+            </a></div>
         <p> Copyright Tierre M 2023 </p>
     </div>
 </footer>
