--- a/index.html
+++ b/index.html
@@ -33,24 +33,25 @@
             <p> Hello! My name is Tierre. <span> I am a UX Designer based in Dallas, Texas. I have a passion for creating innovative designs. </span> </p>
         </div>
     </div>
-    <div><!-- open row that holds (2) columns for project -->
-<div class="row"> <!-- open first column (used for image) -->
+<div class="container"> 
     <h2> My Work </h2>
-    <div class="column col-md-6 col-lg-7">
+    <div class="row">
+    <div class="column col-md-6 col-lg-5 col-xl-4">
 <picture>
     <source srcset="img/plutopay/plutopay.jpg" media="(max-width:767px)">
     <img src="img/plutopay/plutopay.jpg" alt="My Image">
 </picture>
 </div>
-</div><!-- end first column -->
-<div class="column col-md-6 col-lg-5"><!-- open second column (used for text)-->
+<div class="column col-md-6 col-lg-7 col-xl-4"><!-- open second column (used for text)-->
 <h3> PlutoPay </h3><!-- project heading -->
 <p><!-- open paragraph -->
 PlutoPay is an electronic wallet app that allows users to send money, shop for items, make payments and more.
 </p><!-- end paragraph -->
 <a href="plutopay.html" class="button"> View Project </a><!-- button or link label -->
 </div><!-- end second column -->
-<div>
+</div>
+<div class="row">
+    <div class="col-md-6 col-lg-5 col-xl-4">
     <picture>
         <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
             <defs>
@@ -653,7 +654,7 @@ PlutoPay is an electronic wallet app that allows users to send money, shop for i
         </svg>
     </picture>
     </div>
-<div><!-- open third column (used for example)-->
+<div class="col-md-6 col-lg-7 col-xl-4"><!-- open third column (used for example)-->
     <h3> CSS Animation </h3><!-- project heading -->
     <p><!-- open paragraph -->
     CSS animation example.
@@ -661,22 +662,20 @@ PlutoPay is an electronic wallet app that allows users to send money, shop for i
     <a href="plutopay.html" class="button"> View Project </a><!-- button or link label -->
     </div><!-- end second column -->
     </div><!-- end row that holds (2) columns for project -->
+    </div>
     </main>
+
     <footer id="contact">
         <div class="footer">
             <h2> Let's Stay Connected! </h2>
             <p> Please feel free to contact me through the socials below. </p>
-        </div>
-        <div class="footer">
             <a href="middletontierre@gmail.com" class="button"> Email Me </a>
             <!-- social media layout and placeholders -->
             <div id="linkedin">
             <a href="https://www.linkedin.com/in/tierremiddleton/" target="_blank"><svg height="32" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512" width="32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M256,0c141.29,0 256,114.71 256,256c0,141.29 -114.71,256 -256,256c-141.29,0 -256,-114.71 -256,-256c0,-141.29 114.71,-256 256,-256Zm-80.037,399.871l0,-199.921l-66.464,0l0,199.921l66.464,0Zm239.62,0l0,-114.646c0,-61.409 -32.787,-89.976 -76.509,-89.976c-35.255,0 -51.047,19.389 -59.889,33.007l0,-28.306l-66.447,0c0.881,18.757 0,199.921 0,199.921l66.446,0l0,-111.65c0,-5.976 0.43,-11.95 2.191,-16.221c4.795,-11.935 15.737,-24.299 34.095,-24.299c24.034,0 33.663,18.34 33.663,45.204l0,106.966l66.45,0Zm-272.403,-296.321c-22.74,0 -37.597,14.95 -37.597,34.545c0,19.182 14.405,34.544 36.717,34.544l0.429,0c23.175,0 37.6,-15.362 37.6,-34.544c-0.43,-19.595 -14.424,-34.545 -37.149,-34.545Z"/></svg>
                 </a></div>
-        </div>
-        <div class="footer">
             <p> Copyright Tierre M 2023 </p>
-        </div>
+            </div>
     </footer>
 <script src="js/scripts.js"></script>
     </body>
