--- a/about.html
+++ b/about.html
@@ -8,20 +8,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/471b1cd100.js" crossorigin="anonymous"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
     <header>
         <div class="container">
+            <div class="navtoggle" id="myNavtoggle">
             <img src="img/logo.svg" alt="Tierre Middleton" class="logo">
             <nav>
                 <ul class="navigation">
                 <li><a href="index.html"> Work</a></li>
                 <li><a href="about.html"> About</a></li>
-                <li><a href="#contact"> Contact</a></li>
+                <li><a href="#contact" onclick="menuToggle()"> Contact</a></li>
+                <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
            </ul>
             </nav>
+            </div>
         </div>
     </header>
 <main>
@@ -86,5 +90,10 @@
         <p> Copyright Tierre M 2023 </p>
     </div>
 </footer>
+<script
+  src="https://code.jquery.com/jquery-3.7.0.min.js"
+  integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+  crossorigin="anonymous"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
