--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <main>
     <div id="hero">
         <div class="container">
-            <h1> Hey There!</h1>
-            <p> Hello! My name is Tierre. <span> I am a UX Designer based in Dallas, Texas. I have a passion for creating innovative designs. </span> </p>
+            <h1> Welcome!!</h1>
+            <p> Hello! My name is Tierre. <span> I am a UX Designer based in Dallas, Texas. I have a passion for creating innovative and memorable designs. Please take at look at my work and feel free to contact me with any questions or comments you may have. </span> </p>
         </div>
     </div>
 <div class="container"> 
